objects/LeadMgmtConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration Settings for Lead Management Processes</description>
    <fields>
        <fullName>ActivityRecordBatch1_ShareDelay__c</fullName>
        <inlineHelpText>Used in Activity Mapping and contains the number of seconds to delay the next schedule for &quot;ActivityRecordBatch1&quot;</inlineHelpText>
        <label>ActivityRecordBatch1_ShareDelay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Lead_Owner__c</fullName>
        <label>Default Lead Owner</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Recipients__c</fullName>
        <label>Error Recipients</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Connection_ID__c</fullName>
        <label>Lead Connection ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Lead Management Config</label>
</CustomObject>